<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/calculadora"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtCalculadora"
        android:layout_width="157dp"
        android:layout_height="31dp"
        android:layout_marginTop="64dp"
        android:background="#FF9800"
        android:gravity="center"
        android:text="@string/txt_calculadora"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_numero1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="172dp"
        android:autofillHints=""
        android:background="@android:color/holo_orange_light"
        android:ems="10"
        android:hint="@string/edt_numero_1"
        android:inputType="numberSigned|numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCalculadora" />

    <EditText
        android:id="@+id/edt_numero2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@android:color/holo_orange_light"
        android:ems="10"
        android:hint="@string/edt_numero_2"
        android:inputType="numberSigned|numberDecimal"
        app:layout_constraintStart_toStartOf="@+id/edt_numero1"
        app:layout_constraintTop_toBottomOf="@+id/edt_numero1" />

    <Button
        android:id="@+id/btn_sumar"
        android:layout_width="89dp"
        android:layout_height="45dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/botonsumar"
        android:onClick="sumar"
        android:text="@string/bt_text_sumar"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.881"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCalculadora" />

    <Button
        android:id="@+id/btn_dividir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/botondividir"
        android:onClick="dividir"
        android:text="@string/bt_dividir"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.879"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_multiplicar" />

    <Button
        android:id="@+id/btn_multiplicar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/botonpor"
        android:onClick="multiplicar"
        android:text="@string/bt_multiplicar"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.879"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_restar" />

    <Button
        android:id="@+id/btn_restar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/botonmenos"
        android:gravity="center"
        android:onClick="restar"
        android:text="@string/bt_restar"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.879"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_sumar"
        tools:ignore="OnClick" />

    <TextView
        android:id="@+id/txt_resultado"
        android:layout_width="297dp"
        android:layout_height="50dp"
        android:layout_marginBottom="196dp"
        android:background="#FF9800"
        android:gravity="center"
        android:hint="@string/resultado"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>